--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
+    "@mui/material": "^7.0.2",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.1.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.4",
+    "aos": "^2.3.4",
+    "axios": "^1.8.4",
+    "create-file-list": "^1.1.0",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
-    "tailwindcss": "^4.1.4"
+    "sweetalert2": "^11.19.1",
+    "swiper": "^11.2.6",
+    "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
